Fix crash dragging bookmarks (bug 204781), bryner@netscape.com's patch, r=jkeiser@netscape.com, sr=jst@netscape.com, a=asa